--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <script src="./test.js"></script>
 </head>
 <body>
+<div class="chpeks">1</div>
+<div class="keks">2</div>
 </body>
+<style>.keks{background: red;width: 100px;}.chpeks{background: blue;width: 100px;}</style>
+<script src="./govnoliba.js"></script>
 </html>
